Update directory structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,47 +1,18 @@
 cmake_minimum_required(VERSION 3.11 FATAL_ERROR)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake/Modules")
-project(cpp-test VERSION 1.0.0)
+project(super)
 
-# ccache
-find_program(CCACHE_FOUND ccache)
-if(CCACHE_FOUND)
-    message(STATUS "Found CCache")
-    set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
-    set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
-endif(CCACHE_FOUND)
+include(CMakeDependentOption)
 
-# dependencies
-find_package(Eigen3 REQUIRED)
+set(THIRDPARTY_SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}/3rdparty")
+set(THIRDPARTY_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/deps")
 
 # always generate PIC code, no matter static or shared library
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 # options
-option(CORE_OPTION "..." ON)
+option(OPTION_A "..." ON)
 
-configure_file(cmake/version.h.in include/core/version.h)
+add_subdirectory(library)
 
-add_library(core)
-set_target_properties(core PROPERTIES CXX_EXTENSIONS OFF) # -std=c++17 instead of -std=g++17
-target_sources(core
-    PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/include/core/core.h
-        ${CMAKE_CURRENT_SOURCE_DIR}/src/core/core.cpp
-)
-target_include_directories(core
-    PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}/include
-        ${CMAKE_CURRENT_BINARY_DIR}/include
-    PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/src
-)
-target_compile_features(core
-    PUBLIC
-        cxx_std_17
-)
-target_link_libraries(core
-    PUBLIC
-        Eigen3::Eigen
-)
-
-add_subdirectory(utils)
+add_subdirectory(pc)
