--- a/.gitignore
+++ b/.gitignore
@@ -206,8 +206,19 @@ Temporary Items
 
 
 # Misc
-build/
-.vscode/
+build/**
+cmake-build-debug/**
+cmake-build-release/**
+cmake-build-relwithdebinfo/**
+.idea/**
+.vscode/**
 
+*.custom.sh
+*.conf
+
+build-docker/**
+
+3rdparty/**
+!3rdparty/.gitkeep
 data/**
 !data/.gitkeep
