--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.11 FATAL_ERROR)
-project(pc LANGUAGES CXX)
+project(utils LANGUAGES CXX)
 
 add_executable(use_core)
-target_sources(use_core PRIVATE ${CMAKE_CURRENT_LIST_DIR}/src/use_core.cpp)
+target_sources(use_core PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/use_core.cpp)
 target_link_libraries(use_core PRIVATE core)
