Use tar.gz instead of zip

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,8 +41,8 @@ set(THIRDPARTY_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/deps")
 # spdlog
 FetchContent_Declare(
     spdlog
-    URL https://github.com/gabime/spdlog/archive/refs/tags/v1.9.2.zip
-    URL_HASH MD5=a3d2fb9e5c811ba100380aa82d48f989
+    URL https://github.com/gabime/spdlog/archive/refs/tags/v1.9.2.tar.gz
+    URL_HASH MD5=cee7f3d31178a00791d7a22c6738df6d
     DOWNLOAD_DIR ${THIRDPARTY_SOURCE_DIR}
     SOURCE_DIR ${THIRDPARTY_SOURCE_DIR}/spdlog-src
 )
@@ -61,8 +61,8 @@ endif()
 # boost
 FetchContent_Declare(
     boost
-    URL https://boostorg.jfrog.io/artifactory/main/beta/1.79.0.beta1/source/boost_1_79_0_b1.zip
-    URL_HASH MD5=960590ecc301cf6c090db02e35527315
+    URL https://boostorg.jfrog.io/artifactory/main/beta/1.79.0.beta1/source/boost_1_79_0_b1.tar.gz
+    URL_HASH MD5=b2a240d67680ef965a5167e974c1c0e8
     DOWNLOAD_DIR ${THIRDPARTY_SOURCE_DIR}
     SOURCE_DIR ${THIRDPARTY_SOURCE_DIR}/boost-src
 )
@@ -80,8 +80,8 @@ endif()
 # eigen
 FetchContent_Declare(
     eigen
-    URL https://gitlab.com/libeigen/eigen/-/archive/3.4.0/eigen-3.4.0.zip
-    URL_HASH MD5=994092410ba29875184f7725e0371596
+    URL https://gitlab.com/libeigen/eigen/-/archive/3.4.0/eigen-3.4.0.tar.gz
+    URL_HASH MD5=4c527a9171d71a72a9d4186e65bea559
     DOWNLOAD_DIR ${THIRDPARTY_SOURCE_DIR}
     SOURCE_DIR ${THIRDPARTY_SOURCE_DIR}/eigen-src
 )
