--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -9,6 +9,14 @@ add_executable(use_core)
 target_sources(use_core PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/use_core.cpp)
 target_link_libraries(use_core PRIVATE core)
 
+add_executable(use_eigen)
+target_sources(use_eigen PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/use_eigen.cpp)
+target_link_libraries(use_eigen PRIVATE core)
+
+add_executable(use_lyra)
+target_sources(use_lyra PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/use_lyra.cpp)
+target_link_libraries(use_lyra PRIVATE core)
+
 add_executable(use_spdlog)
 target_sources(use_spdlog PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/use_spdlog.cpp)
 target_link_libraries(use_spdlog PRIVATE core)
