--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -3,7 +3,11 @@ project(utils LANGUAGES CXX)
 
 add_executable(use_boost)
 target_sources(use_boost PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/use_boost.cpp)
-target_link_libraries(use_boost PRIVATE core)
+target_link_libraries(use_boost PRIVATE core depends::boost)
+
+add_executable(use_ceres)
+target_sources(use_ceres PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/use_ceres.cpp)
+target_link_libraries(use_ceres PRIVATE core depends::ceres-solver)
 
 add_executable(use_core)
 target_sources(use_core PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/use_core.cpp)
@@ -11,15 +15,15 @@ target_link_libraries(use_core PRIVATE core)
 
 add_executable(use_eigen)
 target_sources(use_eigen PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/use_eigen.cpp)
-target_link_libraries(use_eigen PRIVATE core)
+target_link_libraries(use_eigen PRIVATE core depends::eigen)
 
 add_executable(use_lyra)
 target_sources(use_lyra PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/use_lyra.cpp)
-target_link_libraries(use_lyra PRIVATE core)
+target_link_libraries(use_lyra PRIVATE core depends::lyra)
 
 add_executable(use_range)
 target_sources(use_range PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/use_range.cpp)
-target_link_libraries(use_range PRIVATE core)
+target_link_libraries(use_range PRIVATE core depends::range-v3)
 
 add_executable(use_spdlog)
 target_sources(use_spdlog PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/use_spdlog.cpp)
