Speed up eigen cmake configuration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ set(CMAKE_POLICY_DEFAULT_CMP0069 NEW)
 include(FetchContent)
 set(FETCHCONTENT_QUIET OFF)
 
+include(GNUInstallDirs)
+include(CMakePackageConfigHelpers)
 include(CMakeDependentOption)
 
 # ccache
@@ -51,7 +53,7 @@ FetchContent_GetProperties(spdlog)
 if(NOT spdlog_POPULATED)
     FetchContent_Populate(spdlog)
 endif()
-add_subdirectory(${spdlog_SOURCE_DIR})
+add_subdirectory(${spdlog_SOURCE_DIR} ${spdlog_BINARY_DIR})
 add_library(depends::spdlog INTERFACE IMPORTED GLOBAL)
 target_link_libraries(depends::spdlog INTERFACE spdlog::spdlog_header_only)
 set(spdlog-source-dir ${spdlog_SOURCE_DIR} CACHE INTERNAL "" FORCE)
@@ -92,10 +94,63 @@ FetchContent_GetProperties(eigen)
 if(NOT eigen_POPULATED)
     FetchContent_Populate(eigen)
 endif()
-set(EIGEN_TEST_CXX11 ON CACHE BOOL "" FORCE)
-set(EIGEN_BUILD_DOC OFF CACHE BOOL "" FORCE)
-set(BUILD_TESTING OFF CACHE BOOL "" FORCE)
-add_subdirectory(${eigen_SOURCE_DIR} ${eigen_BINARY_DIR})
+file(READ "${eigen_SOURCE_DIR}/Eigen/src/Core/util/Macros.h" _eigen_version_header)
+string(REGEX MATCH "define[ \t]+EIGEN_WORLD_VERSION[ \t]+([0-9]+)" _eigen_world_version_match "${_eigen_version_header}")
+set(EIGEN_WORLD_VERSION "${CMAKE_MATCH_1}")
+string(REGEX MATCH "define[ \t]+EIGEN_MAJOR_VERSION[ \t]+([0-9]+)" _eigen_major_version_match "${_eigen_version_header}")
+set(EIGEN_MAJOR_VERSION "${CMAKE_MATCH_1}")
+string(REGEX MATCH "define[ \t]+EIGEN_MINOR_VERSION[ \t]+([0-9]+)" _eigen_minor_version_match "${_eigen_version_header}")
+set(EIGEN_MINOR_VERSION "${CMAKE_MATCH_1}")
+set(EIGEN_VERSION_NUMBER ${EIGEN_WORLD_VERSION}.${EIGEN_MAJOR_VERSION}.${EIGEN_MINOR_VERSION})
+
+set(INCLUDE_INSTALL_DIR "${CMAKE_INSTALL_INCLUDEDIR}/eigen3" CACHE PATH "The directory relative to CMAKE_INSTALL_PREFIX where Eigen header files are installed")
+set(CMAKEPACKAGE_INSTALL_DIR "${CMAKE_INSTALL_DATADIR}/eigen3/cmake" CACHE PATH "The directory relative to CMAKE_INSTALL_PREFIX where Eigen3Config.cmake is installed")
+# message(STATUS "${CMAKE_INSTALL_INCLUDEDIR} ${CMAKE_INSTALL_DATADIR}")
+# message(STATUS "${INCLUDE_INSTALL_DIR} ${CMAKEPACKAGE_INSTALL_DIR}")
+
+set(EIGEN_VERSION_STRING ${EIGEN_VERSION_NUMBER})
+set(EIGEN_VERSION_MAJOR  ${EIGEN_WORLD_VERSION})
+set(EIGEN_VERSION_MINOR  ${EIGEN_MAJOR_VERSION})
+set(EIGEN_VERSION_PATCH  ${EIGEN_MINOR_VERSION})
+set(EIGEN_DEFINITIONS "")
+set(EIGEN_INCLUDE_DIR "${CMAKE_INSTALL_PREFIX}/${INCLUDE_INSTALL_DIR}")
+set(EIGEN_ROOT_DIR ${CMAKE_INSTALL_PREFIX})
+
+add_library(eigen INTERFACE)
+add_library(Eigen3::Eigen ALIAS eigen)
+target_include_directories(eigen INTERFACE
+    $<BUILD_INTERFACE:${eigen_SOURCE_DIR}>
+    $<INSTALL_INTERFACE:${INCLUDE_INSTALL_DIR}>
+)
+# Export as title case Eigen
+set_target_properties (eigen PROPERTIES EXPORT_NAME Eigen)
+install(TARGETS eigen EXPORT Eigen3Targets)
+configure_package_config_file (
+    ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Eigen3Config.cmake.in
+    ${CMAKE_CURRENT_BINARY_DIR}/Eigen3Config.cmake
+    PATH_VARS EIGEN_INCLUDE_DIR EIGEN_ROOT_DIR
+    INSTALL_DESTINATION ${CMAKEPACKAGE_INSTALL_DIR}
+    NO_CHECK_REQUIRED_COMPONENTS_MACRO # Eigen does not provide components
+)
+write_basic_package_version_file(
+    ${CMAKE_CURRENT_BINARY_DIR}/Eigen3ConfigVersion.cmake
+    VERSION ${EIGEN_VERSION_NUMBER}
+    COMPATIBILITY SameMajorVersion
+)
+export(TARGETS eigen NAMESPACE Eigen3:: FILE Eigen3Targets.cmake)
+export(PACKAGE Eigen3)
+install(
+    EXPORT Eigen3Targets
+    NAMESPACE Eigen3::
+    DESTINATION ${CMAKEPACKAGE_INSTALL_DIR}
+)
+install(
+    FILES ${CMAKE_CURRENT_SOURCE_DIR}/cmake/UseEigen3.cmake
+          ${CMAKE_CURRENT_BINARY_DIR}/Eigen3Config.cmake
+          ${CMAKE_CURRENT_BINARY_DIR}/Eigen3ConfigVersion.cmake
+    DESTINATION ${CMAKEPACKAGE_INSTALL_DIR}
+)
+
 add_library(depends::eigen INTERFACE IMPORTED GLOBAL)
 target_link_libraries(depends::eigen INTERFACE Eigen3::Eigen)
 set(eigen-source-dir ${eigen_SOURCE_DIR} CACHE INTERNAL "" FORCE)
@@ -112,11 +167,7 @@ FetchContent_Declare(
     DOWNLOAD_DIR ${THIRDPARTY_SOURCE_DIR}
     # SOURCE_DIR ${THIRDPARTY_SOURCE_DIR}/ceres-solver-src
 )
-FetchContent_GetProperties(ceres-solver)
-if(NOT ceres-solver_POPULATED)
-    FetchContent_Populate(ceres-solver)
-endif()
-set(Eigen3_DIR ${eigen-binary-dir} CACHE PATH "" FORCE)
+set(Eigen3_DIR ${CMAKE_CURRENT_BINARY_DIR} CACHE PATH "" FORCE)
 set(MINIGLOG ON CACHE BOOL "" FORCE)
 set(GFLAGS OFF CACHE BOOL "" FORCE)
 set(SUITESPARSE OFF CACHE BOOL "" FORCE)
@@ -130,6 +181,10 @@ set(BUILD_TESTING OFF CACHE BOOL "" FORCE)
 set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 set(BUILD_BENCHMARKS OFF CACHE BOOL "" FORCE)
 set(PROVIDE_UNINSTALL_TARGET OFF CACHE BOOL "" FORCE)
+FetchContent_GetProperties(ceres-solver)
+if(NOT ceres-solver_POPULATED)
+    FetchContent_Populate(ceres-solver)
+endif()
 add_subdirectory(${ceres-solver_SOURCE_DIR} ${ceres-solver_BINARY_DIR})
 add_library(depends::ceres-solver INTERFACE IMPORTED GLOBAL)
 target_link_libraries(depends::ceres-solver INTERFACE ceres)
