--- a/cmake/version.h.in
+++ b/cmake/version.h.in
@@ -7,6 +7,6 @@
 
 #define CORE_VERSION_STRING "core v${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}.${PROJECT_VERSION_TWEAK}"
 
-// #define CORE core_${PROJECT_VERSION_MAJOR}_${PROJECT_VERSION_MINOR}_${PROJECT_VERSION_PATCH}_${PROJECT_VERSION_TWEAK}
+// #define CORE_VERSION_ID core_${PROJECT_VERSION_MAJOR}_${PROJECT_VERSION_MINOR}_${PROJECT_VERSION_PATCH}_${PROJECT_VERSION_TWEAK}
 
 #cmakedefine OPTION_A
